relatorio no notebook

--- a/PI/3S/PROJETO_6/ml_analise.ipynb
+++ b/PI/3S/PROJETO_6/ml_analise.ipynb
@@ -1111,6 +1111,23 @@
     "best_svm_model = grid_search.best_estimator_\n",
     "evaluate_model(best_svm_model, 'Grid Search no SVM')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e9d9d37",
+   "metadata": {},
+   "source": [
+    "# Conclusão\n",
+    "\n",
+    "Os modelos se comportaram de maneira bem semelhantes, cada um com sua particularidade.\n",
+    "\n",
+    "### Resumo\n",
+    "- O SVC teve uma acurárcia mais alta, conseguindo um melhor desempenho em identificar os Spams, porém, se confundiu ao marcar 4 hams como spam.\n",
+    "- O Bayes teve um desempenho mais baixo em spam, mas sua assertividade no ham foi de 100%.\n",
+    "- O modelo 'otimizado' do SVC teve uma assertividade mais baixa, deixando passar 1 spam e marcando 1 ham.\n",
+    "\n",
+    "Analisando esses pontos, por mais que o Bayes tenha deixado passar mais spams, ele garantiu que nenhum e-mail legítimo fosse perdido. Portanto é um modelo mais confiável. "
+   ]
   }
  ],
  "metadata": {
